--- a/example.tex
+++ b/example.tex
@@ -17,6 +17,8 @@
 %\usepackage{euler}
 \usepackage{lineno}
 \usepackage{relsize}
+\usepackage{subcaption}
+\usepackage{caption}
 \linenumbers
 
 %% Put package includes etc. into preamble.tex for convenience
