--- a/example.tex
+++ b/example.tex
@@ -19,6 +19,7 @@
 \usepackage{relsize}
 \usepackage{subcaption}
 \usepackage{caption}
+\usepackage{verbatim}
 \linenumbers
 
 %% Put package includes etc. into preamble.tex for convenience
